delete bad endpoint
